# LearningPythonWithGames

./: README.md  pyproject.toml
01/: 1_schermo.py  fiocchi_neve.py
02/: 2_variabili.py  3_numeri_operatori.py  4_operatori.py
02intropython/: 1_build_fn.py  5_strings.py  README.md  esercizi1-2.txt  primi_concetti_escluso_files_oop.ipynb
03intropgz/: 1_schermo.py  2_grafica.py  3_actor.py  4_mouse_collide.py  intro01.py  pgztemplate.py
extra/colori/: colori.py
extra/how-not-to-code/: maze_bad.py  maze_good.py  player.py  shared.py
game01/: 1_screen.py  2_1_actor.py  2_2_actor.py  2_2_actor_pos.py  3_1_mouse.py  3_2_message.py  3_3_schedule.py  3_4_explosion.py  3_mouse.py  4_message.py  alieno.py
game02/: 1_punteggio.py  2_1_pass.py  2_2_timer.py  3_1_mov_actor.py  3_2_collisione.py  ape.py  bombo.py  tonygame.py
game02_1/: README.md  tonygame.py
game03/: 1_1_liste.py  1_2_linee.py  2_1_timer.py  satelliti.py
game04/: 1_1_scheletro.py  1_2_creastelle.py  1_3_mostrastelle.py  2_1_animastelle.py  2_2_click.py  stellarossa.py
game04_1/: README.md  stranger_things.py
game05/: 1_1_progetta.py  colori.py  colors.py  daniel.txt  domande.txt  questions.txt  quiz-en.py  quiz.py
game06/: app.py  high-score.txt  mongolfiera.py
game07/: bird.py
game08/: karate.py
game09/: stars.py  stelle.py
game10/: invasione.py  space.py
oo01/: animali1.py  animali1b.py  animali2.py  animali2b.py  animali3.py  animali3_lupi.py  animali3b.py  animali3b_lupi.py  animali4.py  animali5.py  animali_lib.py  pecore1.py  pecore1b.py  pecore2.py
pgzintro/: intro02.py
(+113 files in other folders)
